Source/ISS/Development/SAIS/SAIS_Devices/Dmm_Ri4152A/Vendor/Include/ri4152a.h

/******   Used by Function ri4152a_currDcAper   *****/
#define  ri4152a_APER_MAX  2.0
#define  ri4152a_APER_MIN  4.0e-4
/******   Used by Function ri4152a_currDcNplc   *****/
#define  ri4152a_NPLC_MAX  100.0
#define  ri4152a_NPLC_MIN  0.02
/******   Used by Function ri4152a_freqVoltRang   *****/
#define  ri4152a_VOLT_RANG_MAX  300.0
#define  ri4152a_VOLT_RANG_MIN  0.0
#define  ri4152a_VOLT_RANG_100MV  100.0e-3
#define  ri4152a_VOLT_RANG_1V  1.0
#define  ri4152a_VOLT_RANG_10V  10.0
#define  ri4152a_VOLT_RANG_100V  100.0
#define  ri4152a_VOLT_RANG_300V  300.0
/******   Used by Function ri4152a_resRes   *****/
#define  ri4152a_RES_RES_MAX  10.0e3
#define  ri4152a_RES_RES_MIN  30.0e-6
#define  ri4152a_RES_RES_30_MICRO  30.0e-6
#define  ri4152a_RES_RES_100_MICRO  100.0e-6
#define  ri4152a_RES_RES_300_MICRO  300.0e-6
#define  ri4152a_RES_RES_1_MILLI  1.0e-3
#define  ri4152a_RES_RES_3_MILLI  3.0e-3
#define  ri4152a_RES_RES_10_MILLI  10.0e-3
#define  ri4152a_RES_RES_30_MILLI  30.0e-3
#define  ri4152a_RES_RES_100_MILLI  100.0e-3
#define  ri4152a_RES_RES_300_MILLI  300.0e-3
#define  ri4152a_RES_RES_1  1.0
#define  ri4152a_RES_RES_3  3.0
#define  ri4152a_RES_RES_10  10.0
#define  ri4152a_RES_RES_30  30.0
#define  ri4152a_RES_RES_100  100.0
#define  ri4152a_RES_RES_300  300.0
#define  ri4152a_RES_RES_1K  1.0e3
#define  ri4152a_RES_RES_10K  10.0e3
/******   Used by Function ri4152a_sampCoun   *****/
#define  ri4152a_SAMP_COUN_MAX  50000
#define  ri4152a_SAMP_COUN_MIN  1
/******   Used by Function ri4152a_systLfr   *****/
#define  ri4152a_SYST_LFR_MAX  400
#define  ri4152a_SYST_LFR_MIN  50
#define  ri4152a_SYST_LFR_50  50
#define  ri4152a_SYST_LFR_60  60
#define  ri4152a_SYST_LFR_400  400
/******   Used by Function ri4152a_timedFetch_Q   *****/
/* #define  ri4152a_TIMEOUT_MAX  2147483647 */
/* #define  ri4152a_TIMEOUT_MIN  0 */


/******   Used by Function ri4152a_trigCoun   *****/
#define  ri4152a_TRIG_COUN_MAX  50000
#define  ri4152a_TRIG_COUN_MIN  1
/******   Used by Function ri4152a_trigDel   *****/
#define  ri4152a_TRIG_DEL_MAX  3600.0
#define  ri4152a_TRIG_DEL_MIN  0.0
/******   Used by Function ri4152a_trigSour   *****/
#define  ri4152a_TRIG_SOUR_BUS  0
#define  ri4152a_TRIG_SOUR_EXT  1
#define  ri4152a_TRIG_SOUR_IMM  2
#define  ri4152a_TRIG_SOUR_TTLT0  3
#define  ri4152a_TRIG_SOUR_TTLT1  4
#define  ri4152a_TRIG_SOUR_TTLT2  5
#define  ri4152a_TRIG_SOUR_TTLT3  6
#define  ri4152a_TRIG_SOUR_TTLT4  7
#define  ri4152a_TRIG_SOUR_TTLT5  8
#define  ri4152a_TRIG_SOUR_TTLT6  9
#define  ri4152a_TRIG_SOUR_TTLT7  10
/******   Used by Function ri4152a_trigSour_Q   *****/
/*  ri4152a_TRIG_SOUR_BUS  */
/*  ri4152a_TRIG_SOUR_EXT  */
/*  ri4152a_TRIG_SOUR_IMM  */
/*  ri4152a_TRIG_SOUR_TTLT0  */
/*  ri4152a_TRIG_SOUR_TTLT1  */
/*  ri4152a_TRIG_SOUR_TTLT2  */
/*  ri4152a_TRIG_SOUR_TTLT3  */
/*  ri4152a_TRIG_SOUR_TTLT4  */
/*  ri4152a_TRIG_SOUR_TTLT5  */
/*  ri4152a_TRIG_SOUR_TTLT6  */
/*  ri4152a_TRIG_SOUR_TTLT7  */


/******   Used by Function ri4152a_trigger   *****/
/*  ri4152a_TRIG_COUN_MAX  */
/*  ri4152a_TRIG_COUN_MIN  */
/*  ri4152a_TRIG_DEL_MAX  */
/*  ri4152a_TRIG_DEL_MIN  */
/*  ri4152a_TRIG_SOUR_BUS  */
/*  ri4152a_TRIG_SOUR_EXT  */
/*  ri4152a_TRIG_SOUR_IMM  */
/*  ri4152a_TRIG_SOUR_TTLT0  */
/*  ri4152a_TRIG_SOUR_TTLT1  */
/*  ri4152a_TRIG_SOUR_TTLT2  */
/*  ri4152a_TRIG_SOUR_TTLT3  */
/*  ri4152a_TRIG_SOUR_TTLT4  */
/*  ri4152a_TRIG_SOUR_TTLT5  */
/*  ri4152a_TRIG_SOUR_TTLT6  */
/*  ri4152a_TRIG_SOUR_TTLT7  */


/******   Used by Function ri4152a_voltAcRang   *****/
/*  ri4152a_VOLT_RANG_MAX  */
/*  ri4152a_VOLT_RANG_MIN  */
/*  ri4152a_VOLT_RANG_100MV  */
/*  ri4152a_VOLT_RANG_1V  */
/*  ri4152a_VOLT_RANG_10V  */
/*  ri4152a_VOLT_RANG_100V  */
/*  ri4152a_VOLT_RANG_300V  */


/******   Used by Function ri4152a_voltAcRes   *****/
#define  ri4152a_VOLT_AC_RES_MAX  100.0e-3
#define  ri4152a_VOLT_AC_RES_MIN  100.0e-9
#define  ri4152a_VOLT_AC_RES_100_NANO  100.0e-9
#define  ri4152a_VOLT_AC_RES_1_MICRO  1.0e-6
#define  ri4152a_VOLT_AC_RES_10_MICRO  10.0e-6
#define  ri4152a_VOLT_AC_RES_100_MICRO  100.0e-6
#define  ri4152a_VOLT_AC_RES_1_MILLI  1.0e-3
#define  ri4152a_VOLT_AC_RES_10_MILLI  10.0e-3
#define  ri4152a_VOLT_AC_RES_100_MILLI  100.0e-3
/******   Used by Function ri4152a_voltDcAper   *****/
/*  ri4152a_APER_MAX  */
/*  ri4152a_APER_MIN  */


/******   Used by Function ri4152a_voltDcNplc   *****/
/*  ri4152a_NPLC_MAX  */
/*  ri4152a_NPLC_MIN  */


/******   Used by Function ri4152a_voltDcRang   *****/
/*  ri4152a_VOLT_RANG_MAX  */
/*  ri4152a_VOLT_RANG_MIN  */
/*  ri4152a_VOLT_RANG_100MV  */
/*  ri4152a_VOLT_RANG_1V  */
/*  ri4152a_VOLT_RANG_10V  */
/*  ri4152a_VOLT_RANG_100V  */
/*  ri4152a_VOLT_RANG_300V  */


/******   Used by Function ri4152a_voltDcRes   *****/
#define  ri4152a_VOLT_DC_RES_MAX  100.0e-3
#define  ri4152a_VOLT_DC_RES_MIN  30.0e-9
#define  ri4152a_VOLT_DC_RES_30_NANO  30.0e-9
#define  ri4152a_VOLT_DC_RES_100_NANO  100.0e-9
#define  ri4152a_VOLT_DC_RES_300_NANO  300.0e-9
#define  ri4152a_VOLT_DC_RES_1_MICRO  1.0e-6
#define  ri4152a_VOLT_DC_RES_3_MICRO  3.0e-6
#define  ri4152a_VOLT_DC_RES_10_MICRO  10.0e-6
#define  ri4152a_VOLT_DC_RES_30_MICRO  30.0e-6
#define  ri4152a_VOLT_DC_RES_100_MICRO  100.0e-6
#define  ri4152a_VOLT_DC_RES_300_MICRO  300.0e-6
#define  ri4152a_VOLT_DC_RES_1_MILLI  1.0e-3
#define  ri4152a_VOLT_DC_RES_3_MILLI  3.0e-3
#define  ri4152a_VOLT_DC_RES_10_MILLI  10.0e-3
#define  ri4152a_VOLT_DC_RES_100_MILLI  100.0e-3
ViStatus _VI_FUNC ri4152a_abor  (ViSession vi);
ViStatus _VI_FUNC ri4152a_average_Q  (ViSession vi, ViPReal64 average, ViPReal64 minValue, ViPReal64 maxValue, ViPInt32 points);
ViStatus _VI_FUNC ri4152a_calCoun_Q  (ViSession vi, ViPInt16 calCoun);
ViStatus _VI_FUNC ri4152a_calLfr  (ViSession vi, ViInt16 calLfr);
ViStatus _VI_FUNC ri4152a_calLfr_Q  (ViSession vi, ViPInt16 calLfr);
ViStatus _VI_FUNC ri4152a_calSecCode  (ViSession vi, ViString code);
ViStatus _VI_FUNC ri4152a_calSecStat  (ViSession vi, ViBoolean state, ViString code);
ViStatus _VI_FUNC ri4152a_calSecStat_Q  (ViSession vi, ViPBoolean state);
ViStatus _VI_FUNC ri4152a_calVal  (ViSession vi, ViReal64 value);
ViStatus _VI_FUNC ri4152a_calVal_Q  (ViSession vi, ViPReal64 value);
ViStatus _VI_FUNC ri4152a_calZeroAuto  (ViSession vi, ViInt16 calZeroAuto);
ViStatus _VI_FUNC ri4152a_calZeroAuto_Q  (ViSession vi, ViPInt16 calZeroAuto);
ViStatus _VI_FUNC ri4152a_calcAverAver_Q  (ViSession vi, ViPReal64 average);
ViStatus _VI_FUNC ri4152a_calcAverCoun_Q  (ViSession vi, ViPInt32 points);
ViStatus _VI_FUNC ri4152a_calcAverMax_Q  (ViSession vi, ViPReal64 maxValue);
ViStatus _VI_FUNC ri4152a_calcAverMin_Q  (ViSession vi, ViPReal64 minValue);
ViStatus _VI_FUNC ri4152a_calcDbRef  (ViSession vi, ViReal64 calcDbRef);
ViStatus _VI_FUNC ri4152a_calcDbRef_Q  (ViSession vi, ViPReal64 calcDbRef);
ViStatus _VI_FUNC ri4152a_calcDbmRef  (ViSession vi, ViReal64 calcDbmRef);
ViStatus _VI_FUNC ri4152a_calcDbmRef_Q  (ViSession vi, ViPReal64 calcDbmRef);
ViStatus _VI_FUNC ri4152a_calcFunc  (ViSession vi, ViInt16 calcFunc);
ViStatus _VI_FUNC ri4152a_calcFunc_Q  (ViSession vi, ViPInt16 calcFunc);
ViStatus _VI_FUNC ri4152a_calcLimLow  (ViSession vi, ViReal64 calcLimLow);
ViStatus _VI_FUNC ri4152a_calcLimLow_Q  (ViSession vi, ViPReal64 calcLimLow);
ViStatus _VI_FUNC ri4152a_calcLimUpp  (ViSession vi, ViReal64 calcLimUpp);
ViStatus _VI_FUNC ri4152a_calcLimUpp_Q  (ViSession vi, ViPReal64 calcLimUpp);
ViStatus _VI_FUNC ri4152a_calcNullOffs  (ViSession vi, ViReal64 calcNullOffs);
ViStatus _VI_FUNC ri4152a_calcNullOffs_Q  (ViSession vi, ViPReal64 calcNullOffs);
ViStatus _VI_FUNC ri4152a_calcStat  (ViSession vi, ViBoolean calcStat);
ViStatus _VI_FUNC ri4152a_calcStat_Q  (ViSession vi, ViPBoolean calcStat);
ViStatus _VI_FUNC ri4152a_confCurrAc  (ViSession vi);
ViStatus _VI_FUNC ri4152a_confCurrDc  (ViSession vi);
ViStatus _VI_FUNC ri4152a_confFreq  (ViSession vi);
ViStatus _VI_FUNC ri4152a_confFres  (ViSession vi);
ViStatus _VI_FUNC ri4152a_confPer  (ViSession vi);
ViStatus _VI_FUNC ri4152a_confRes  (ViSession vi);
ViStatus _VI_FUNC ri4152a_confVoltAc  (ViSession vi);
ViStatus _VI_FUNC ri4152a_confVoltDc  (ViSession vi);
ViStatus _VI_FUNC ri4152a_confVoltDcRat  (ViSession vi);
ViStatus _VI_FUNC ri4152a_conf_Q  (ViSession vi, ViPInt16 function, ViPBoolean autoRange, ViPReal64 range, ViPReal64 resolution);
ViStatus _VI_FUNC ri4152a_configure  (ViSession vi, ViInt16 function);
ViStatus _VI_FUNC ri4152a_currAcRang  (ViSession vi, ViBoolean autoRange, ViReal64 range);
ViStatus _VI_FUNC ri4152a_currAcRang_Q  (ViSession vi, ViPBoolean autoRange, ViPReal64 range);
ViStatus _VI_FUNC ri4152a_currAcRes  (ViSession vi, ViReal64 resolution);
ViStatus _VI_FUNC ri4152a_currAcRes_Q  (ViSession vi, ViPReal64 resolution);
ViStatus _VI_FUNC ri4152a_currDcAper  (ViSession vi, ViReal64 aperture);
ViStatus _VI_FUNC ri4152a_currDcAper_Q  (ViSession vi, ViPReal64 aperture);
ViStatus _VI_FUNC ri4152a_currDcNplc  (ViSession vi, ViReal64 nplc);
ViStatus _VI_FUNC ri4152a_currDcNplc_Q  (ViSession vi, ViPReal64 nplc);
ViStatus _VI_FUNC ri4152a_currDcRang  (ViSession vi, ViBoolean autoRange, ViReal64 range);
ViStatus _VI_FUNC ri4152a_currDcRang_Q  (ViSession vi, ViPBoolean autoRange, ViPReal64 range);
ViStatus _VI_FUNC ri4152a_currDcRes  (ViSession vi, ViReal64 resolution);
ViStatus _VI_FUNC ri4152a_currDcRes_Q  (ViSession vi, ViPReal64 resolution);
ViStatus _VI_FUNC ri4152a_dataPoin_Q  (ViSession vi, ViPInt32 numReadings);
ViStatus _VI_FUNC ri4152a_detBand  (ViSession vi, ViReal64 detBand);
ViStatus _VI_FUNC ri4152a_detBand_Q  (ViSession vi, ViPReal64 detBand);
ViStatus _VI_FUNC ri4152a_fetc_Q  (ViSession vi, ViReal64 _VI_FAR readings[], ViPInt32 numReadings);
ViStatus _VI_FUNC ri4152a_freqAper  (ViSession vi, ViReal64 aperture);
ViStatus _VI_FUNC ri4152a_freqAper_Q  (ViSession vi, ViPReal64 aperture);
ViStatus _VI_FUNC ri4152a_freqVoltRang  (ViSession vi, ViBoolean autoRange, ViReal64 range);
ViStatus _VI_FUNC ri4152a_freqVoltRang_Q  (ViSession vi, ViPBoolean autoRange, ViPReal64 range);
ViStatus _VI_FUNC ri4152a_func  (ViSession vi, ViInt16 func);
ViStatus _VI_FUNC ri4152a_resRes  (ViSession vi, ViReal64 resolution);
ViStatus _VI_FUNC ri4152a_sampCoun  (ViSession vi, ViInt32 sampCoun);
ViStatus _VI_FUNC ri4152a_systLfr  (ViSession vi, ViInt16 systLfr);
ViStatus _VI_FUNC ri4152a_trigCoun  (ViSession vi, ViInt32 trigCoun);
ViStatus _VI_FUNC ri4152a_trigDel  (ViSession vi, ViBoolean trigDelAuto, ViReal64 trigDel);
ViStatus _VI_FUNC ri4152a_trigSour  (ViSession vi, ViInt16 trigSour);
ViStatus _VI_FUNC ri4152a_trigSour_Q  (ViSession vi, ViPInt16 trigSour);
ViStatus _VI_FUNC ri4152a_trigger  (ViSession vi, ViInt32 count, ViBoolean autoDelay, ViReal64 delay, ViInt16 source);
ViStatus _VI_FUNC ri4152a_trigger_Q  (ViSession vi, ViPInt32 count, ViPBoolean autoDelay, ViPReal64 delay, ViPInt16 trigSour);
ViStatus _VI_FUNC ri4152a_voltAcRang  (ViSession vi, ViBoolean autoRange, ViReal64 range);
ViStatus _VI_FUNC ri4152a_voltAcRes  (ViSession vi, ViReal64 resolution);
ViStatus _VI_FUNC ri4152a_voltDcAper  (ViSession vi, ViReal64 aperture);
ViStatus _VI_FUNC ri4152a_voltDcNplc  (ViSession vi, ViReal64 nplc);
ViStatus _VI_FUNC ri4152a_voltDcRang  (ViSession vi, ViBoolean autoRange, ViReal64 range);
ViStatus _VI_FUNC ri4152a_voltDcRes  (ViSession vi, ViReal64 resolution);