Source/Core/Source/Drivers/DMM/include/ri4152a.bas


' Used by Function ri4152a_resRes
Global Const ri4152a_RES_RES_MAX = 10000#
Global Const ri4152a_RES_RES_MIN = 0.00003
Global Const ri4152a_RES_RES_30_MICRO = 0.00003
Global Const ri4152a_RES_RES_100_MICRO = 0.0001
Global Const ri4152a_RES_RES_300_MICRO = 0.0003
Global Const ri4152a_RES_RES_1_MILLI = 0.001
Global Const ri4152a_RES_RES_3_MILLI = 0.003
Global Const ri4152a_RES_RES_10_MILLI = 0.01
Global Const ri4152a_RES_RES_30_MILLI = 0.03
Global Const ri4152a_RES_RES_100_MILLI = 0.1
Global Const ri4152a_RES_RES_300_MILLI = 0.3
Global Const ri4152a_RES_RES_1 = 1#
Global Const ri4152a_RES_RES_3 = 3#
Global Const ri4152a_RES_RES_10 = 10#
Global Const ri4152a_RES_RES_30 = 30#
Global Const ri4152a_RES_RES_100 = 100#
Global Const ri4152a_RES_RES_300 = 300#
Global Const ri4152a_RES_RES_1K = 1000#
Global Const ri4152a_RES_RES_10K = 10000#

' Used by Function ri4152a_sampCoun
Global Const ri4152a_SAMP_COUN_MAX = 50000
Global Const ri4152a_SAMP_COUN_MIN = 1

' Used by Function ri4152a_systLfr
Global Const ri4152a_SYST_LFR_MAX = 400
Global Const ri4152a_SYST_LFR_MIN = 50
Global Const ri4152a_SYST_LFR_50 = 50
Global Const ri4152a_SYST_LFR_60 = 60
Global Const ri4152a_SYST_LFR_400 = 400

' Used by Function ri4152a_trigCoun
Global Const ri4152a_TRIG_COUN_MAX = 50000
Global Const ri4152a_TRIG_COUN_MIN = 1

' Used by Function ri4152a_trigDel
Global Const ri4152a_TRIG_DEL_MAX = 3600#
Global Const ri4152a_TRIG_DEL_MIN = 0#

' Used by Function ri4152a_trigSour
Global Const ri4152a_TRIG_SOUR_BUS = 0
Global Const ri4152a_TRIG_SOUR_EXT = 1
Global Const ri4152a_TRIG_SOUR_IMM = 2
Global Const ri4152a_TRIG_SOUR_TTLT0 = 3
Global Const ri4152a_TRIG_SOUR_TTLT1 = 4
Global Const ri4152a_TRIG_SOUR_TTLT2 = 5
Global Const ri4152a_TRIG_SOUR_TTLT3 = 6
Global Const ri4152a_TRIG_SOUR_TTLT4 = 7
Global Const ri4152a_TRIG_SOUR_TTLT5 = 8
Global Const ri4152a_TRIG_SOUR_TTLT6 = 9
Global Const ri4152a_TRIG_SOUR_TTLT7 = 10

' Used by Function ri4152a_trigSour_Q
'    ri4152a_TRIG_SOUR_BUS
'    ri4152a_TRIG_SOUR_EXT
'    ri4152a_TRIG_SOUR_IMM
'    ri4152a_TRIG_SOUR_TTLT0
'    ri4152a_TRIG_SOUR_TTLT1
'    ri4152a_TRIG_SOUR_TTLT2
'    ri4152a_TRIG_SOUR_TTLT3
'    ri4152a_TRIG_SOUR_TTLT4
'    ri4152a_TRIG_SOUR_TTLT5
'    ri4152a_TRIG_SOUR_TTLT6
'    ri4152a_TRIG_SOUR_TTLT7

' Used by Function ri4152a_trigger
'    ri4152a_TRIG_COUN_MAX
'    ri4152a_TRIG_COUN_MIN
'    ri4152a_TRIG_DEL_MAX
'    ri4152a_TRIG_DEL_MIN
'    ri4152a_TRIG_SOUR_BUS
'    ri4152a_TRIG_SOUR_EXT
'    ri4152a_TRIG_SOUR_IMM
'    ri4152a_TRIG_SOUR_TTLT0
'    ri4152a_TRIG_SOUR_TTLT1
'    ri4152a_TRIG_SOUR_TTLT2
'    ri4152a_TRIG_SOUR_TTLT3
'    ri4152a_TRIG_SOUR_TTLT4
'    ri4152a_TRIG_SOUR_TTLT5
'    ri4152a_TRIG_SOUR_TTLT6
'    ri4152a_TRIG_SOUR_TTLT7

' Used by Function ri4152a_trigger_Q
'    ri4152a_TRIG_SOUR_BUS
'    ri4152a_TRIG_SOUR_EXT
'    ri4152a_TRIG_SOUR_IMM
'    ri4152a_TRIG_SOUR_TTLT0
'    ri4152a_TRIG_SOUR_TTLT1
'    ri4152a_TRIG_SOUR_TTLT2
'    ri4152a_TRIG_SOUR_TTLT3
'    ri4152a_TRIG_SOUR_TTLT4
'    ri4152a_TRIG_SOUR_TTLT5
'    ri4152a_TRIG_SOUR_TTLT6
'    ri4152a_TRIG_SOUR_TTLT7

' Used by Function ri4152a_voltAcRang
'    ri4152a_VOLT_RANG_MAX
'    ri4152a_VOLT_RANG_MIN
'    ri4152a_VOLT_RANG_100MV
'    ri4152a_VOLT_RANG_1V
'    ri4152a_VOLT_RANG_10V
'    ri4152a_VOLT_RANG_100V
'    ri4152a_VOLT_RANG_300V

' Used by Function ri4152a_voltAcRes
Global Const ri4152a_VOLT_AC_RES_MAX = 0.1
Global Const ri4152a_VOLT_AC_RES_MIN = 0.0000001
Global Const ri4152a_VOLT_AC_RES_100_NANO = 0.0000001
Global Const ri4152a_VOLT_AC_RES_1_MICRO = 0.000001
Global Const ri4152a_VOLT_AC_RES_10_MICRO = 0.00001
Global Const ri4152a_VOLT_AC_RES_100_MICRO = 0.0001
Global Const ri4152a_VOLT_AC_RES_1_MILLI = 0.001
Global Const ri4152a_VOLT_AC_RES_10_MILLI = 0.01
Global Const ri4152a_VOLT_AC_RES_100_MILLI = 0.1

' Used by Function ri4152a_voltDcAper
'    ri4152a_APER_MAX
'    ri4152a_APER_MIN

' Used by Function ri4152a_voltDcNplc
'    ri4152a_NPLC_MAX
'    ri4152a_NPLC_MIN

' Used by Function ri4152a_voltDcRang
'    ri4152a_VOLT_RANG_MAX
'    ri4152a_VOLT_RANG_MIN
'    ri4152a_VOLT_RANG_100MV
'    ri4152a_VOLT_RANG_1V
'    ri4152a_VOLT_RANG_10V
'    ri4152a_VOLT_RANG_100V
'    ri4152a_VOLT_RANG_300V

' Used by Function ri4152a_voltDcRes
Global Const ri4152a_VOLT_DC_RES_MAX = 0.1
Global Const ri4152a_VOLT_DC_RES_MIN = 0.00000003
Global Const ri4152a_VOLT_DC_RES_30_NANO = 0.00000003
Global Const ri4152a_VOLT_DC_RES_100_NANO = 0.0000001
Global Const ri4152a_VOLT_DC_RES_300_NANO = 0.0000003
Global Const ri4152a_VOLT_DC_RES_1_MICRO = 0.000001
Global Const ri4152a_VOLT_DC_RES_3_MICRO = 0.000003
Global Const ri4152a_VOLT_DC_RES_10_MICRO = 0.00001
Global Const ri4152a_VOLT_DC_RES_30_MICRO = 0.00003
Global Const ri4152a_VOLT_DC_RES_100_MICRO = 0.0001
Global Const ri4152a_VOLT_DC_RES_300_MICRO = 0.0003
Global Const ri4152a_VOLT_DC_RES_1_MILLI = 0.001
Global Const ri4152a_VOLT_DC_RES_3_MILLI = 0.003
Global Const ri4152a_VOLT_DC_RES_10_MILLI = 0.01
Global Const ri4152a_VOLT_DC_RES_100_MILLI = 0.1


'------------------------------------------------------------------------------
' Function Declarations
'------------------------------------------------------------------------------

Declare Function ri4152a_abor Lib "ri4152a_32.dll" (ByVal vi As Long) As Long

Declare Function ri4152a_average_Q Lib "ri4152a_32.dll" (ByVal vi As Long, average As Double, minValue As Double, maxValue As Double, points As Long) As Long

Declare Function ri4152a_calCoun_Q Lib "ri4152a_32.dll" (ByVal vi As Long, calCoun As Integer) As Long

Declare Function ri4152a_calLfr Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal calLfr As Integer) As Long

Declare Function ri4152a_calLfr_Q Lib "ri4152a_32.dll" (ByVal vi As Long, calLfr As Integer) As Long

Declare Function ri4152a_calSecCode Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal code As String) As Long

Declare Function ri4152a_calSecStat Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal state As Integer, ByVal code As String) As Long

Declare Function ri4152a_calSecStat_Q Lib "ri4152a_32.dll" (ByVal vi As Long, state As Integer) As Long

Declare Function ri4152a_calVal Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal value As Double) As Long

Declare Function ri4152a_calVal_Q Lib "ri4152a_32.dll" (ByVal vi As Long, value As Double) As Long

Declare Function ri4152a_calZeroAuto Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal calZeroAuto As Integer) As Long

Declare Function ri4152a_calZeroAuto_Q Lib "ri4152a_32.dll" (ByVal vi As Long, calZeroAuto As Integer) As Long

Declare Function ri4152a_calcAverAver_Q Lib "ri4152a_32.dll" (ByVal vi As Long, average As Double) As Long

Declare Function ri4152a_calcAverCoun_Q Lib "ri4152a_32.dll" (ByVal vi As Long, points As Long) As Long

Declare Function ri4152a_calcAverMax_Q Lib "ri4152a_32.dll" (ByVal vi As Long, maxValue As Double) As Long

Declare Function ri4152a_calcAverMin_Q Lib "ri4152a_32.dll" (ByVal vi As Long, minValue As Double) As Long

Declare Function ri4152a_calcDbRef Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal calcDbRef As Double) As Long

Declare Function ri4152a_calcDbRef_Q Lib "ri4152a_32.dll" (ByVal vi As Long, calcDbRef As Double) As Long

Declare Function ri4152a_calcDbmRef Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal calcDbmRef As Double) As Long

Declare Function ri4152a_calcDbmRef_Q Lib "ri4152a_32.dll" (ByVal vi As Long, calcDbmRef As Double) As Long

Declare Function ri4152a_calcFunc Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal calcFunc As Integer) As Long

Declare Function ri4152a_calcFunc_Q Lib "ri4152a_32.dll" (ByVal vi As Long, calcFunc As Integer) As Long

Declare Function ri4152a_calcLimLow Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal calcLimLow As Double) As Long

Declare Function ri4152a_calcLimLow_Q Lib "ri4152a_32.dll" (ByVal vi As Long, calcLimLow As Double) As Long

Declare Function ri4152a_calcLimUpp Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal calcLimUpp As Double) As Long

Declare Function ri4152a_calcLimUpp_Q Lib "ri4152a_32.dll" (ByVal vi As Long, calcLimUpp As Double) As Long

Declare Function ri4152a_calcNullOffs Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal calcNullOffs As Double) As Long

Declare Function ri4152a_calcNullOffs_Q Lib "ri4152a_32.dll" (ByVal vi As Long, calcNullOffs As Double) As Long

Declare Function ri4152a_calcStat Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal calcStat As Integer) As Long

Declare Function ri4152a_calcStat_Q Lib "ri4152a_32.dll" (ByVal vi As Long, calcStat As Integer) As Long

Declare Function ri4152a_confCurrAc Lib "ri4152a_32.dll" (ByVal vi As Long) As Long

Declare Function ri4152a_confCurrDc Lib "ri4152a_32.dll" (ByVal vi As Long) As Long

Declare Function ri4152a_confFreq Lib "ri4152a_32.dll" (ByVal vi As Long) As Long

Declare Function ri4152a_confFres Lib "ri4152a_32.dll" (ByVal vi As Long) As Long

Declare Function ri4152a_confPer Lib "ri4152a_32.dll" (ByVal vi As Long) As Long

Declare Function ri4152a_confRes Lib "ri4152a_32.dll" (ByVal vi As Long) As Long

Declare Function ri4152a_confVoltAc Lib "ri4152a_32.dll" (ByVal vi As Long) As Long

Declare Function ri4152a_confVoltDc Lib "ri4152a_32.dll" (ByVal vi As Long) As Long

Declare Function ri4152a_confVoltDcRat Lib "ri4152a_32.dll" (ByVal vi As Long) As Long

Declare Function ri4152a_conf_Q Lib "ri4152a_32.dll" (ByVal vi As Long, func As Integer, autoRange As Integer, range As Double, resolution As Double) As Long

Declare Function ri4152a_configure Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal func As Integer) As Long

Declare Function ri4152a_currAcRang Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal autoRange As Integer, ByVal range As Double) As Long

Declare Function ri4152a_currAcRang_Q Lib "ri4152a_32.dll" (ByVal vi As Long, autoRange As Integer, range As Double) As Long

Declare Function ri4152a_currAcRes Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal resolution As Double) As Long

Declare Function ri4152a_currAcRes_Q Lib "ri4152a_32.dll" (ByVal vi As Long, resolution As Double) As Long

Declare Function ri4152a_currDcAper Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal aperture As Double) As Long

Declare Function ri4152a_currDcAper_Q Lib "ri4152a_32.dll" (ByVal vi As Long, aperture As Double) As Long

Declare Function ri4152a_currDcNplc Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal nplc As Double) As Long

Declare Function ri4152a_currDcNplc_Q Lib "ri4152a_32.dll" (ByVal vi As Long, nplc As Double) As Long

Declare Function ri4152a_currDcRang Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal autoRange As Integer, ByVal range As Double) As Long

Declare Function ri4152a_currDcRang_Q Lib "ri4152a_32.dll" (ByVal vi As Long, autoRange As Integer, range As Double) As Long

Declare Function ri4152a_currDcRes Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal resolution As Double) As Long

Declare Function ri4152a_currDcRes_Q Lib "ri4152a_32.dll" (ByVal vi As Long, resolution As Double) As Long

Declare Function ri4152a_dataPoin_Q Lib "ri4152a_32.dll" (ByVal vi As Long, numReadings As Long) As Long

Declare Function ri4152a_detBand Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal detBand As Double) As Long

Declare Function ri4152a_detBand_Q Lib "ri4152a_32.dll" (ByVal vi As Long, detBand As Double) As Long

Declare Function ri4152a_fetc_Q Lib "ri4152a_32.dll" (ByVal vi As Long, readings As Double, numReadings As Long) As Long

Declare Function ri4152a_freqAper Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal aperture As Double) As Long

Declare Function ri4152a_freqAper_Q Lib "ri4152a_32.dll" (ByVal vi As Long, aperture As Double) As Long

Declare Function ri4152a_freqVoltRang Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal autoRange As Integer, ByVal range As Double) As Long

Declare Function ri4152a_freqVoltRang_Q Lib "ri4152a_32.dll" (ByVal vi As Long, autoRange As Integer, range As Double) As Long

Declare Function ri4152a_func Lib "ri4152a_32.dll" (ByVal vi As Long, ByVal func As Integer) As Long
